<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirSwimmer</string>
    
    <!-- buttons -->
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_right">Right</string>
    <string name="button_left">Left</string>
    
    <string name="action_settings">Settings</string>
    
	<!-- start.xml menu -->
    <string name="select_mode">Modus auswählen</string>
    <!-- submenu of select_mode -->
    <string name="mode_remote">Fernbedienung</string>
    <string name="mode_slide">Ziehen</string>
    <string name="mode_shake">Shütteln</string>
    
    <string name="change_background">Hintergrund ändern</string>
    <!-- submenu of change-background -->
    <string name="water_picture">Wasser</string>
    <string name="sky_picture">Himmel</string>
</resources>